BTL/211/initial/initial/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Class'", "'Val'", "'Var'", "'If'", "'Else'", 
                     "'Elseif'", "'Foreach'", "'In'", "'By'", "'..'", "'Self'", 
                     "'New'", "'Break'", "'Continue'", "'Return'", "'Constructor'", 
                     "'Destructor'", "'String'", "'Bool'", "'Int'", "'Float'", 
                     "'True'", "'False'", "'Array'", "'Null'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'+.'", "'==.'", 
                     "'.'", "'::'", "'='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "','", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "VAL", "VAR", "IF", "ELSE", 
                      "ELSEIF", "FOREACH", "IN", "BY", "UPTO", "SELF", "NEW", 
                      "BREAK", "CONTINUE", "RETURN", "CONSTRUCTOR", "DESTRUCTOR", 
                      "STRINGTYPE", "BOOLTYPE", "INTTYPE", "FLOATTYPE", 
                      "TRUE", "FALSE", "ARRAY", "NULL", "ADDOP", "SUBOP", 
                      "MULOP", "DIVOP", "MODOP", "AND", "OR", "NOT", "EQ", 
                      "NE", "LT", "LTE", "GT", "GTE", "CONCAT", "STRCOMP", 
                      "INSACC", "STATICACC", "ASSIGNOP", "LP", "RP", "LCB", 
                      "RCB", "LSB", "RSB", "COMMA", "COLON", "SEMI", "KEYWORD", 
                      "MEM_ID", "ID", "STATIC_ID", "INTLIT", "FLOATLIT", 
                      "BOOLLIT", "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "COMMENT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classDecl = 1
    RULE_memDecl = 2
    RULE_attrDecl = 3
    RULE_attrList = 4
    RULE_attrListInit = 5
    RULE_methodDecl = 6
    RULE_paramList = 7
    RULE_blockStat = 8
    RULE_expr = 9
    RULE_expr1 = 10
    RULE_expr2 = 11
    RULE_expr3 = 12
    RULE_expr4 = 13
    RULE_expr5 = 14
    RULE_expr6 = 15
    RULE_expr7 = 16
    RULE_expr8 = 17
    RULE_expr9 = 18
    RULE_operand = 19
    RULE_stat = 20
    RULE_declStat = 21
    RULE_varDecl = 22
    RULE_varList = 23
    RULE_varListInit = 24
    RULE_assignStat = 25
    RULE_ifStat = 26
    RULE_forStat = 27
    RULE_methodCall = 28
    RULE_scalarVar = 29
    RULE_typeDecl = 30
    RULE_arrayLit = 31
    RULE_exprList = 32
    RULE_argList = 33
    RULE_arrayList = 34
    RULE_array_ele = 35

    ruleNames =  [ "program", "classDecl", "memDecl", "attrDecl", "attrList", 
                   "attrListInit", "methodDecl", "paramList", "blockStat", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "expr9", "operand", "stat", 
                   "declStat", "varDecl", "varList", "varListInit", "assignStat", 
                   "ifStat", "forStat", "methodCall", "scalarVar", "typeDecl", 
                   "arrayLit", "exprList", "argList", "arrayList", "array_ele" ]

    EOF = Token.EOF
    CLASS=1
    VAL=2
    VAR=3
    IF=4
    ELSE=5
    ELSEIF=6
    FOREACH=7
    IN=8
    BY=9
    UPTO=10
    SELF=11
    NEW=12
    BREAK=13
    CONTINUE=14
    RETURN=15
    CONSTRUCTOR=16
    DESTRUCTOR=17
    STRINGTYPE=18
    BOOLTYPE=19
    INTTYPE=20
    FLOATTYPE=21
    TRUE=22
    FALSE=23
    ARRAY=24
    NULL=25
    ADDOP=26
    SUBOP=27
    MULOP=28
    DIVOP=29
    MODOP=30
    AND=31
    OR=32
    NOT=33
    EQ=34
    NE=35
    LT=36
    LTE=37
    GT=38
    GTE=39
    CONCAT=40
    STRCOMP=41
    INSACC=42
    STATICACC=43
    ASSIGNOP=44
    LP=45
    RP=46
    LCB=47
    RCB=48
    LSB=49
    RSB=50
    COMMA=51
    COLON=52
    SEMI=53
    KEYWORD=54
    MEM_ID=55
    ID=56
    STATIC_ID=57
    INTLIT=58
    FLOATLIT=59
    BOOLLIT=60
    STRINGLIT=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    COMMENT=64
    WS=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassDeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.classDecl()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 77
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def memDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemDeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemDeclContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = D96Parser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(D96Parser.CLASS)
                self.state = 80
                self.match(D96Parser.ID)
                self.state = 81
                self.match(D96Parser.LCB)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.MEM_ID))) != 0):
                    self.state = 82
                    self.memDecl()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 88
                self.match(D96Parser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(D96Parser.CLASS)
                self.state = 90
                self.match(D96Parser.ID)
                self.state = 91
                self.match(D96Parser.COLON)
                self.state = 92
                self.match(D96Parser.ID)
                self.state = 93
                self.match(D96Parser.LCB)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.MEM_ID))) != 0):
                    self.state = 94
                    self.memDecl()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.match(D96Parser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrDecl(self):
            return self.getTypedRuleContext(D96Parser.AttrDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(D96Parser.MethodDeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemDecl" ):
                return visitor.visitMemDecl(self)
            else:
                return visitor.visitChildren(self)




    def memDecl(self):

        localctx = D96Parser.MemDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memDecl)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.attrDecl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.MEM_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.methodDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def attrList(self):
            return self.getTypedRuleContext(D96Parser.AttrListContext,0)


        def attrListInit(self):
            return self.getTypedRuleContext(D96Parser.AttrListInitContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrDecl" ):
                return visitor.visitAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def attrDecl(self):

        localctx = D96Parser.AttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 108
                self.attrList()
                pass

            elif la_ == 2:
                self.state = 109
                self.attrListInit()
                pass


            self.state = 112
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEM_ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.MEM_ID)
            else:
                return self.getToken(D96Parser.MEM_ID, i)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(D96Parser.TypeDeclContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attrList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrList" ):
                return visitor.visitAttrList(self)
            else:
                return visitor.visitChildren(self)




    def attrList(self):

        localctx = D96Parser.AttrListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attrList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(D96Parser.MEM_ID)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 115
                self.match(D96Parser.COMMA)
                self.state = 116
                self.match(D96Parser.MEM_ID)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(D96Parser.COLON)
            self.state = 123
            self.typeDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrListInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEM_ID(self):
            return self.getToken(D96Parser.MEM_ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def attrListInit(self):
            return self.getTypedRuleContext(D96Parser.AttrListInitContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typeDecl(self):
            return self.getTypedRuleContext(D96Parser.TypeDeclContext,0)


        def ASSIGNOP(self):
            return self.getToken(D96Parser.ASSIGNOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attrListInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrListInit" ):
                return visitor.visitAttrListInit(self)
            else:
                return visitor.visitChildren(self)




    def attrListInit(self):

        localctx = D96Parser.AttrListInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attrListInit)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(D96Parser.MEM_ID)
                self.state = 126
                self.match(D96Parser.COMMA)

                self.state = 127
                self.attrListInit()
                self.state = 128
                self.match(D96Parser.COMMA)
                self.state = 129
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(D96Parser.MEM_ID)
                self.state = 132
                self.match(D96Parser.COLON)
                self.state = 133
                self.typeDecl()
                self.state = 134
                self.match(D96Parser.ASSIGNOP)
                self.state = 135
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEM_ID(self):
            return self.getToken(D96Parser.MEM_ID, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def blockStat(self):
            return self.getTypedRuleContext(D96Parser.BlockStatContext,0)


        def paramList(self):
            return self.getTypedRuleContext(D96Parser.ParamListContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_methodDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = D96Parser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.MEM_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(D96Parser.MEM_ID)
                self.state = 140
                self.match(D96Parser.LP)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID:
                    self.state = 141
                    self.paramList()


                self.state = 144
                self.match(D96Parser.RP)
                self.state = 145
                self.blockStat()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 147
                self.match(D96Parser.LP)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.ID:
                    self.state = 148
                    self.paramList()


                self.state = 151
                self.match(D96Parser.RP)
                self.state = 152
                self.blockStat()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.match(D96Parser.DESTRUCTOR)
                self.state = 154
                self.match(D96Parser.LP)
                self.state = 155
                self.match(D96Parser.RP)
                self.state = 156
                self.blockStat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COLON)
            else:
                return self.getToken(D96Parser.COLON, i)

        def typeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.TypeDeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.TypeDeclContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = D96Parser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(D96Parser.ID)
            self.state = 160
            self.match(D96Parser.COLON)
            self.state = 161
            self.typeDecl()
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 162
                self.match(D96Parser.SEMI)
                self.state = 163
                self.match(D96Parser.ID)
                self.state = 164
                self.match(D96Parser.COLON)
                self.state = 165
                self.typeDecl()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.StatContext)
            else:
                return self.getTypedRuleContext(D96Parser.StatContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_blockStat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStat" ):
                return visitor.visitBlockStat(self)
            else:
                return visitor.visitChildren(self)




    def blockStat(self):

        localctx = D96Parser.BlockStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(D96Parser.LCB)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.IF) | (1 << D96Parser.FOREACH) | (1 << D96Parser.SELF) | (1 << D96Parser.NEW) | (1 << D96Parser.BREAK) | (1 << D96Parser.CONTINUE) | (1 << D96Parser.RETURN) | (1 << D96Parser.ARRAY) | (1 << D96Parser.NULL) | (1 << D96Parser.LP) | (1 << D96Parser.LCB) | (1 << D96Parser.ID) | (1 << D96Parser.INTLIT) | (1 << D96Parser.FLOATLIT) | (1 << D96Parser.BOOLLIT) | (1 << D96Parser.STRINGLIT))) != 0):
                self.state = 172
                self.stat()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Expr1Context)
            else:
                return self.getTypedRuleContext(D96Parser.Expr1Context,i)


        def CONCAT(self):
            return self.getToken(D96Parser.CONCAT, 0)

        def STRCOMP(self):
            return self.getToken(D96Parser.STRCOMP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):
